# lwrap

./: README.md
src/: Makefile.am  README.md  config.cache  configure.ac  filter.c  functions.gv  lwrap.1  lwrap.c  lwrap.h  lwrap.in  lwrap.sh  lwrap.spec.in  outbuff.c  structure.gv  timeline.gv  uaccents.c  uarabic.c  uarmeni.c  uascii.c  uasian.c  ucjk.c  ucyril.c  uforms.c  ufourbyte.c  ugreek.c  uhangul.c  uhebrew.c  uindic.c  uipa.c  ulatin.c  umiddlebyte.c  umisc.c  unicode.c  unko.c  upua.c  usymbol.c  usyriac.c  uthaana.c  verify.c
test/: COPYING  c20.starwars.cn  c20.starwars.en  c20.starwars.fr  c20.starwars.jp  c20.starwars.sv  c20.starwars.zh  c235.starwars.en  c235.starwars.fr  c235.starwars.jp  c235.starwars.sv  c235.starwars.zh  c3.starwars.en  c3.starwars.jp  c3.starwars.sv  c80.starwars.cn  c80.starwars.en  c80.starwars.fr  c80.starwars.jp  c80.starwars.sv  c80.starwars.zh  j20.starwars.en  j20.starwars.fr  j20.starwars.jp  j20.starwars.sv  j20.starwars.zh  j235.starwars.cn  j235.starwars.en  j235.starwars.fr  j235.starwars.jp  j235.starwars.sv  j235.starwars.zh  j3.starwars.cn  j3.starwars.fr  j3.starwars.zh  j80.starwars.en  j80.starwars.fr  j80.starwars.jp  j80.starwars.sv  j80.starwars.zh  (+15 more)
