bin_PROGRAMS = lwrap
lwrap_SOURCES = lwrap.c verify.c filter.c outbuff.c \
								 unicode.c ucjk.c uhangul.c ulatin.c \
								 uindic.c umisc.c usymbol.c uasian.c \
								 upua.c uforms.c uascii.c

man_MANS = lwrap.1
EXTRA_DIST = COPYING ChangeLog INSTALL README \
		install-sh missing mkinstalldirs lwrap.1 lwrap.spec
