bin_PROGRAMS = lwrap
lwrap_SOURCES =  uascii.c filter.c outbuff.c \
ucjk.c uhangul.c ulatin.c \
uindic.c umisc.c usymbol.c uasian.c \
upua.c uforms.c lwrap.c verify.c \
uipa.c uaccents.c ugreek.c ucyril.c \
uarmeni.c uhebrew.c uarabic.c usyriac.c \
uthaana.c unko.c ufourbyte.c umiddlebyte.c

man_MANS = lwrap.1
EXTRA_DIST = COPYING ChangeLog INSTALL README \
		install-sh missing mkinstalldirs lwrap.1 lwrap.spec
LDADD = /usr/local/lib/libstimy.so
